continue css and desktop version and modify HTML

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   </head>
   <body>
     <main>
+      <article>
       <img src="./assets/images/image-omelette.jpeg" alt="omelette image" />
-      <article class="container">
+      <section class="container">
         <section class="section1">
         <h1>Simple Omelette Recipe</h1>
         <p>
@@ -106,7 +107,8 @@
                  
         </table>
         </section>
-      </article>
+      </section>
+    </article>
     </main>
   </body>
 </html>
